2007-07-14 Kohei Yoshida  <kyoshida@novell.com>

	* source/inc/numeric/funcobj.hxx:
	* source/numeric/funcobj.cxx: added operator() for convenience.
	
	* source/numeric/diff_test.cxx: fixed the test code to reflect API 
	change.
	
	* workben/unittest/Makefile: added diff test.
	
	* source/inc/numeric/quadfitlinesearch.hxx:
	* source/numeric/quadfitlinesearch.cxx: added a little more meat.

2007-07-10  Kohei Yoshida  <kyoshida@novell.com>

	* source/inc/numeric/funcobj.hxx:
	* source/numeric/funcobj.cxx (SingleVarFuncObj): new class to handle
	single-variable non-linear functions added.
	
	* source/inc/numeric/quadfitlinesearch.hxx:
	* source/numeric/quadfitlinesearch.cxx: added just a little more code.
	
	* source/numeric/quadfitlinesearch_test.cxx:
	* workben/unittest/Makefile: added test code for QuadFitLineSearch 
	class.

2007-06-18  Kohei Yoshida  <kyoshida@novell.com>
	
	* source/numeric/polyeqnsolver_test.cxx: re-organized the code a bit.
	
	* source/inc/numeric/quadfitlinesearch.hxx:
	* source/numeric/quadfitlinesearch.cxx:
	* source/numeric/quadfitlinesearch_test.cxx:
	* workben/unittest/Makefile: added new class QuadFitLineSearch and its
	  test case to implement a quadratic fit line search algorithm.

2007-06-17  Kohei Yoshida  <kyoshida@novell.com>

	* source/inc/numeric/polyeqnsolver.hxx: 
	* source/numeric/polyeqnsolver.cxx (getQuadPeak): added.
	
	* source/numeric/polyeqnsolver_test.cxx: added test case for 
	  getQuadPeak() function.
	
2007-06-16  Kohei Yoshida  <kyoshida@novell.com>

	* workben/unittest/Makefile:	
	* source/inc/tool/global.hxx: fixed compilation problem for unittest.
	
	* source/inc/numeric/polyeqnsolver.hxx:
	* source/numeric/polyeqnsolver.cxx: added NotEnoughDataPoints exception
	  class, added clear() and size() methods.
	
	* source/numeric/polyeqnsolver_test.cxx: added test case for clear() &
	  added more test case.
	
	* workben/addon_pkg/Makefile: removed extra tab characters.

2007-06-13  Kohei Yoshida  <kyoshida@novell.com>