@@ -1,4 +1,9 @@
-2007-07-14 Kohei Yoshida  <kyoshida@novell.com>
+2007-07-16  Kohei Yoshida  <kyoshida@novell.com>
+
+	* source/numeric/diff_test.cxx: beefed up the test code for numerical
+	differentiation.
+
+2007-07-14  Kohei Yoshida  <kyoshida@novell.com>
 
 	* source/inc/numeric/funcobj.hxx:
 	* source/numeric/funcobj.cxx: added operator() for convenience.
